final-classify-changes

--- a/CnnClassify.ipynb
+++ b/CnnClassify.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "test1:\n",
     "200 epoch, 30 batch,\n",
-    "Run1:  valid split 0.2, Conv1d 32 unit layer (3) kernel + regularization 0.008; Test score: 0.9921711087226868 Test accuracy: 0.675000011920929\n",
+    "Run1:  Conv1d 32 unit layer (3) kernel + regularization 0.008; Test score: 0.9921711087226868 Test accuracy: 0.675000011920929\n",
     "Run2:  Increase amount of conv1d to 3, 9/7/5 kernel sizes with 128 filter, remove regularization, implement dropout between conv layers and max pool at 0.2, poolsize 2: stuck at val_accuracy: 0.5469\n",
     "\n",
     "retraining up to best validation accuracy epoch :\n",
@@ -833,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
