Further model work

--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -26,19 +26,19 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2') #Encoder text to tensor\n",
-    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)\n"
+    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id) #load the model, using the smallest model for this prototype\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_22156\\3893656625.py:9: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_6380\\4107130471.py:9: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  reviews['text'].str.replace('[^\\w\\s]','') #Remove punctuation\n"
      ]
     },
@@ -46,27 +46,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max length: 1006\n",
-      "57104    this was one of my boyfriend's favorite places...\n",
-      "65110    birchtree catered and pretty much helped plan ...\n",
-      "32763    ray's is my favorite place to get subs in nj. ...\n",
-      "36231    i booked an appointment this afternoon for bot...\n",
-      "85442    the restaurant is small so it produced a long ...\n",
+      "47739    excellent property if you are in the oldsmar, ...\n",
+      "44739    so glad we found this place. it has everything...\n",
+      "14980    so i've tried this place a couple times before...\n",
+      "71427    luke's is awesome! if your looking for some pl...\n",
+      "66821    i love the grilled chicken parmesan salad at t...\n",
       "                               ...                        \n",
-      "27292    loved this place. after an unpleasant experien...\n",
-      "80798    on top of it like piraat ale. great grub. bone...\n",
-      "63060    so a friend and i went to this pakistani \"hole...\n",
-      "88494    good pad thai and spring rolls. fast service e...\n",
-      "50632    so sick!!!  staff was terrible and the produce...\n",
-      "Name: text, Length: 5000, dtype: object\n"
+      "72868    i recently moved here from santa monica, where...\n",
+      "4104     really, more like 3.5 stars. very clean, light...\n",
+      "9021     there's honestly nothing wrong with famous dav...\n",
+      "3112     i can't wait to go back. it's unbelievably ful...\n",
+      "60970    our first stay wound up to be a debacle, mainl...\n",
+      "Name: text, Length: 25000, dtype: object\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_22156\\3893656625.py:22: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
-      "  reviews = reviews[:5000]\n"
+      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_6380\\4107130471.py:15: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "  reviews = reviews[:25000]\n"
      ]
     }
    ],
@@ -84,15 +83,8 @@
     "    reviews['text'].str.replace(\"\\n\", \" \") #Remove escape characters\n",
     "reviews = reviews['text']\n",
     "\n",
-    "#Get the max token from training data to be used in model\n",
-    "max_length = 0\n",
-    "for row in reviews:\n",
-    "    if len(row.split(\" \")) > max_length:\n",
-    "        max_length = len(row.split(\" \"))\n",
-    "\n",
-    "print('max length: ' + str(max_length))\n",
-    "\n",
-    "reviews = reviews[:5000]\n",
+    "#Use only a slice of the data 25k reviews\n",
+    "reviews = reviews[:25000]\n",
     "\n",
     "print(reviews)"
    ]
@@ -101,25 +93,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids = tokenizer.encode(reviews.iloc[1], return_tensors='tf')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (653274 > 1024). Running this sequence through the model will result in indexing errors\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (3230940 > 1024). Running this sequence through the model will result in indexing errors\n"
      ]
     }
    ],
    "source": [
+    "#turn the entire 25000 reviews into a long string to be segmented in next sequence\n",
     "single_string = ''\n",
     "for row in reviews:\n",
     "  x = row\n",
@@ -129,104 +113,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define variables to store the data\n",
     "examples = []\n",
     "block_size = 100\n",
     "BATCH_SIZE = 12\n",
     "BUFFER_SIZE = 1000\n",
+    "\n",
+    "# Split the string_tokenized list into blocks of size block_size\n",
+    "# and store each block in the examples list\n",
     "for i in range(0, len(string_tokenized) - block_size + 1, block_size):\n",
     "  examples.append(string_tokenized[i:i + block_size])\n",
+    "\n",
+    "# Initialize empty lists for inputs and labels\n",
     "inputs, labels = [], []\n",
+    "\n",
+    "# For each example in the examples list,\n",
+    "# store the input as the example without the last element\n",
+    "# and store the label as the example without the first element\n",
     "for ex in examples:\n",
     "  inputs.append(ex[:-1])\n",
     "  labels.append(ex[1:])\n",
+    "\n",
+    "# Create a dataset from the inputs and labels tensors\n",
     "dataset = tf.data.Dataset.from_tensor_slices((inputs, labels))\n",
+    "\n",
+    "# Shuffle the dataset and batch it\n",
     "dataset = dataset.shuffle(BUFFER_SIZE).batch(BATCH_SIZE, drop_remainder=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining optimizer\n",
+    "#optimizer = tf.keras.optimizers.Adam(learning_rate=3e-5, epsilon=1e-08, clipnorm=1.0)\n",
+    "# definining loss function\n",
+    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "# defining our metric which we want to observe\n",
+    "metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
+    "# compiling the model\n",
+    "model.compile(optimizer='adam', loss=[loss, *[None] * model.config.n_layer], metrics=[metric])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running model with 25000 reviews, 100 block size, takes around 8:30 min per epoch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining optimizer\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=3e-5, epsilon=1e-08, clipnorm=1.0)\n",
-    "# definining loss function\n",
-    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "# defining our metric which we want to observe\n",
-    "metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
-    "# compiling the model\n",
-    "model.compile(optimizer=optimizer, loss=[loss, *[None] * model.config.n_layer], metrics=[metric])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/25\n",
-      "544/544 [==============================] - 136s 228ms/step - loss: 3.7692 - accuracy: 0.3066\n",
-      "Epoch 2/25\n",
-      "544/544 [==============================] - 124s 229ms/step - loss: 3.5566 - accuracy: 0.3270\n",
-      "Epoch 3/25\n",
-      "544/544 [==============================] - 125s 229ms/step - loss: 3.4539 - accuracy: 0.3374\n",
-      "Epoch 4/25\n",
-      "544/544 [==============================] - 125s 230ms/step - loss: 3.3672 - accuracy: 0.3472\n",
-      "Epoch 5/25\n",
-      "544/544 [==============================] - 125s 229ms/step - loss: 3.2917 - accuracy: 0.3551\n",
-      "Epoch 6/25\n",
-      "544/544 [==============================] - 125s 229ms/step - loss: 3.2212 - accuracy: 0.3629\n",
-      "Epoch 7/25\n",
-      "544/544 [==============================] - 125s 229ms/step - loss: 3.1513 - accuracy: 0.3713\n",
-      "Epoch 8/25\n",
-      "544/544 [==============================] - 121s 222ms/step - loss: 3.0844 - accuracy: 0.3793\n",
-      "Epoch 9/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 3.0197 - accuracy: 0.3867\n",
-      "Epoch 10/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.9551 - accuracy: 0.3945\n",
-      "Epoch 11/25\n",
-      "544/544 [==============================] - 119s 218ms/step - loss: 2.8933 - accuracy: 0.4033\n",
-      "Epoch 12/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.8318 - accuracy: 0.4107\n",
-      "Epoch 13/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.7733 - accuracy: 0.4183\n",
-      "Epoch 14/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.7134 - accuracy: 0.4265\n",
-      "Epoch 15/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.6569 - accuracy: 0.4341\n",
-      "Epoch 16/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.5988 - accuracy: 0.4426\n",
-      "Epoch 17/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.5441 - accuracy: 0.4502\n",
-      "Epoch 18/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.4895 - accuracy: 0.4583\n",
-      "Epoch 19/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.4348 - accuracy: 0.4664\n",
-      "Epoch 20/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.3806 - accuracy: 0.4744\n",
-      "Epoch 21/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.3278 - accuracy: 0.4831\n",
-      "Epoch 22/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.2771 - accuracy: 0.4908\n",
-      "Epoch 23/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.2274 - accuracy: 0.4987\n",
-      "Epoch 24/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.1748 - accuracy: 0.5074\n",
-      "Epoch 25/25\n",
-      "544/544 [==============================] - 119s 219ms/step - loss: 2.1272 - accuracy: 0.5149\n"
+      "Epoch 1/20\n",
+      "2692/2692 [==============================] - 526s 192ms/step - loss: 3.8531 - accuracy: 0.2918\n",
+      "Epoch 2/20\n",
+      "2692/2692 [==============================] - 519s 193ms/step - loss: 3.5107 - accuracy: 0.3190\n",
+      "Epoch 3/20\n",
+      "2692/2692 [==============================] - 510s 190ms/step - loss: 3.2538 - accuracy: 0.3419\n",
+      "Epoch 4/20\n",
+      "2692/2692 [==============================] - 492s 183ms/step - loss: 3.0075 - accuracy: 0.3674\n",
+      "Epoch 5/20\n",
+      "2692/2692 [==============================] - 493s 183ms/step - loss: 2.7701 - accuracy: 0.3962\n",
+      "Epoch 6/20\n",
+      "2692/2692 [==============================] - 510s 190ms/step - loss: 2.5472 - accuracy: 0.4259\n",
+      "Epoch 7/20\n",
+      "2692/2692 [==============================] - 541s 201ms/step - loss: 2.3427 - accuracy: 0.4557\n",
+      "Epoch 8/20\n",
+      "2692/2692 [==============================] - 564s 209ms/step - loss: 2.1560 - accuracy: 0.4851\n",
+      "Epoch 9/20\n",
+      "2692/2692 [==============================] - 571s 212ms/step - loss: 1.9868 - accuracy: 0.5132\n",
+      "Epoch 10/20\n",
+      "2692/2692 [==============================] - 526s 195ms/step - loss: 1.8337 - accuracy: 0.5398\n",
+      "Epoch 11/20\n",
+      "2692/2692 [==============================] - 531s 197ms/step - loss: 1.6946 - accuracy: 0.5653\n",
+      "Epoch 12/20\n",
+      "2692/2692 [==============================] - 531s 197ms/step - loss: 1.5677 - accuracy: 0.5902\n",
+      "Epoch 13/20\n",
+      "2692/2692 [==============================] - 528s 196ms/step - loss: 1.4528 - accuracy: 0.6130\n",
+      "Epoch 14/20\n",
+      "2692/2692 [==============================] - 528s 196ms/step - loss: 1.3500 - accuracy: 0.6344\n",
+      "Epoch 15/20\n",
+      "2692/2692 [==============================] - 524s 195ms/step - loss: 1.2555 - accuracy: 0.6550\n",
+      "Epoch 16/20\n",
+      "1432/2692 [==============>...............] - ETA: 4:19 - loss: 1.1808 - accuracy: 0.6714"
      ]
     }
    ],
    "source": [
-    "history = model.fit(dataset, epochs=25)"
+    "history = model.fit(dataset, epochs=20)"
    ]
   },
   {
@@ -244,7 +232,7 @@
     }
    ],
    "source": [
-    "text = \"For dinner,\"\n",
+    "text = \"For what it is\"\n",
     "# encoding the input text\n",
     "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
     "# getting out output\n",
@@ -275,7 +263,7 @@
     }
    ],
    "source": [
-    "text = \"The best part was\"\n",
+    "text = \"The restaurant\"\n",
     "# encoding the input text\n",
     "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
     "# getting out output\n",
@@ -305,7 +293,7 @@
     }
    ],
    "source": [
-    "text = \"Every time we go,\"\n",
+    "text = \"I think they're\"\n",
     "# encoding the input text\n",
     "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
     "# getting out output\n",
@@ -335,7 +323,7 @@
     }
    ],
    "source": [
-    "text = \"Their menu changes\"\n",
+    "text = \"I give up on this place\"\n",
     "# encoding the input text\n",
     "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
     "# getting out output\n",
@@ -353,58 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Our waitress was very nice and attentive.  i ordered the shrimp and grits and it was good but the sauce was too sweet for my taste. i will definitely go back to try other dishes on the menu.this is a great place to get a quick bite to eat while in the tampa bay area. they have a wide variety of sandwiches, salads, and smoothies to choose from. the staff is always friendly and always willing to help you get the most out of your visit.my husband and i have been going to this place since we were little. we love it. it's tucked away in a shopping center right by the airport. you can walk in and get free chips and salsa to dip into the delicious salsa bar. service is quick and friendly. food is fresh and delicious. my husband loves his burritos and queso burrito. their tortillas are huge and are made to order. this is one of our favorite places to stop for lunch or dinner.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text = \"Our waitress\"\n",
+    "text = \"Unfortunately,\"\n",
     "# encoding the input text\n",
     "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
     "# getting out output\n",
     "output = model.generate(\n",
     "  input_ids,\n",
-    "  max_length = 200,\n",
+    "  max_length = 150,\n",
     "  num_beams = 5,\n",
-    "  temperature = 0.845,\n",
-    "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
-    ")\n",
-    "\n",
-    "print(tokenizer.decode(output[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "When I walked in, it was already dark and dingy with only a few tables in the place.  i walked out and asked the host if there was anything else they could do to make my meal better, and he said he would look into it, but that he couldn't do anything since they were closing in on a saturday night.\n",
-      "i ordered the chicken and waffles, which were good but nothing to write home about. the waffle was so dense and dense that i had to eat it with a fork and knife. when i got home and looked for the kitchen where the food was being prepared, i realized there wasn't one in there. instead, there were two dirty silverware stacked on the counter. one was dripping wet with grease, one of which had been sitting in my food. i could only see the grease dripping down the side of the panini bread with my fork. it looked like it had come from the sink or some other dirty sink fixture. my order of fries had grease all over them, including the ones with the lollipop in them. they tasted like they came from a pre-mixed can of tomato sauce that was sitting on top of a greasy knife wound around the plate\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"When I walked in,\"\n",
-    "# encoding the input text\n",
-    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
-    "# getting out output\n",
-    "output = model.generate(\n",
-    "  input_ids,\n",
-    "  max_length = 250,\n",
-    "  num_beams = 5,\n",
-    "  temperature = 0.82,\n",
+    "  temperature = 0.8,\n",
     "  no_repeat_ngram_size=2,\n",
     "  num_return_sequences=5\n",
     ")\n",
