--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -158,7 +158,7 @@
     "# defining our metric which we want to observe\n",
     "metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
     "# compiling the model\n",
-    "model.compile(optimizer='adam', loss=[loss, *[None] * model.config.n_layer], metrics=[metric])"
+    "model.compile(optimizer='adam', loss=[loss], metrics=[metric])"
    ]
   },
   {
@@ -209,7 +209,15 @@
       "Epoch 15/20\n",
       "2692/2692 [==============================] - 524s 195ms/step - loss: 1.2555 - accuracy: 0.6550\n",
       "Epoch 16/20\n",
-      "1432/2692 [==============>...............] - ETA: 4:19 - loss: 1.1808 - accuracy: 0.6714"
+      "2692/2692 [==============================] - 543s 202ms/step - loss: 1.1698 - accuracy: 0.6739\n",
+      "Epoch 17/20\n",
+      "2692/2692 [==============================] - 528s 196ms/step - loss: 1.0925 - accuracy: 0.6918\n",
+      "Epoch 18/20\n",
+      "2692/2692 [==============================] - 508s 189ms/step - loss: 1.0205 - accuracy: 0.7085\n",
+      "Epoch 19/20\n",
+      "2692/2692 [==============================] - 499s 185ms/step - loss: 0.9573 - accuracy: 0.7238\n",
+      "Epoch 20/20\n",
+      "2692/2692 [==============================] - 499s 185ms/step - loss: 0.8996 - accuracy: 0.7383\n"
      ]
     }
    ],
@@ -219,15 +227,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as wte_layer_call_fn, wte_layer_call_and_return_conditional_losses, dropout_layer_call_fn, dropout_layer_call_and_return_conditional_losses, ln_f_layer_call_fn while saving (showing 5 of 294). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: saved_model_gpt2\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: saved_model_gpt2\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('saved_model_gpt2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For dinner, my wife and i split an appetizer and two entrees. we split the crab cakes and macaroni and cheese. both were very good. they were fresh and had a nice balance of flavor. the macarons were also very tasty. i would definitely come back for more. \n",
-      "the service was great. our waiter was very attentive and took the time to check on us and make sure we were enjoying the food we ordered. it was a very pleasant experience and we look forward to trying everything else on their menu!i love this place! i've been going here for years and it's one of my favorite places in town! the staff is always friendly and the prices are very reasonable! they have a wide\n"
+      "For what it is; worth driving an hour out of my way for.i'm a local renter in the area and saw this place through a yelp article ranking the top indian restaurants in pinnellas. it wasn't bad but it was nothing special. i had the roti (which is a rotisserie but with a tinge of spiny melon ice cream and a good amount of spice), and the peanut pancake which was served on a bed of naan bread was the most amazingly savory and had a delicious breakfast-like syrup and peanut buttery egg white chocolatey and honey sauce. my daughter enjoyed the fried rice.  and banana pudding even though i could not a touch of which she could\n"
      ]
     }
    ],
@@ -250,15 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best part was the service. we were seated quickly and the place was clean. the staff was friendly and attentive. i would highly recommend this restaurant.i love this place! i've been coming here for years and it's always a good experience. they have a great variety of sandwiches, pastas, and pastries. my favorite is the sweet potato pastrami and my all time favorite the chicken and waffles. \n",
-      "the only downside i can think of is that they don't always have happy hour so make sure you go during the week in order to save a few bucks. but i will definitely come back for sure!i'm a big fan of la colombe burrito and this is by far the best bur\n"
+      "The restaurant. the good: both times service was great and food is always delicious. they even have a new item (came in for chicken) which was a really nice addition. \n",
+      "the bad: tiny portions, very watery atmosphere, expensive for what it is. will not return.best chicken and waffles i have ever eaten\n"
      ]
     }
    ],
@@ -269,9 +307,9 @@
     "# getting out output\n",
     "output = model.generate(\n",
     "  input_ids,\n",
-    "  max_length = 150,\n",
+    "  max_length = 70,\n",
     "  num_beams = 5,\n",
-    "  temperature = 0.85,\n",
+    "  temperature = 0.7,\n",
     "  no_repeat_ngram_size=2,\n",
     "  num_return_sequences=5\n",
     ")\n",
@@ -288,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Every time we go, we are greeted with a warm smile and a knowing nod from our waiter.  it is a great way to give back to our community and show that we care about our food and are not afraid to try something new.i love this place. i've been going here for years and i can't say enough good things about the staff. they are always friendly and the food is always great. the only downside is the price. it's a little expensive for what you get\n"
+      "I think they're trying too hard to be authentic and not trying to sell me stuff i don't need. i'm just glad they didn't say so (as it's probably pretty likely to stop being sold out that anything i bought is probably not worth what it is.)people of the nwc skyline that most people would like to see.  they had a great selection of beer from the vodkas (though i've never been there), and there were a few food items as well\n"
      ]
     }
    ],
@@ -301,7 +339,7 @@
     "  input_ids,\n",
     "  max_length = 100,\n",
     "  num_beams = 5,\n",
-    "  temperature = 0.85,\n",
+    "  temperature = 0.75,\n",
     "  no_repeat_ngram_size=2,\n",
     "  num_return_sequences=5\n",
     ")\n",
@@ -311,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Their menu changes all the time, so it's hard to know what to expect.  i'm not sure if we'll be back next year, but we will definitely stop in for the oysters and the crawfish bisque.my husband and i have been going to this place since we were little. we love it. the staff is always friendly and helpful. they have a wide variety of specialty pizzas to choose from. i always get the calabacitas and they are delicious. it is a little pricey for what you get but the portions are very generous. if you are looking for something different then this\n"
+      "I give up on this place (the other day i went to pick up the phone and spent a few hours there) and was told i would need to make an appointment for the next day.  as soon as i got there (a little later than i thought it would be) the young lady was unapologetic, rude, pushy, impatient, and rolled her eyes on more than one occassion that it was impossible for both of us and she didn't tell me about it either.\n"
      ]
     }
    ],
@@ -329,9 +367,9 @@
     "# getting out output\n",
     "output = model.generate(\n",
     "  input_ids,\n",
-    "  max_length = 125,\n",
+    "  max_length = 100,\n",
     "  num_beams = 5,\n",
-    "  temperature = 0.92,\n",
+    "  temperature = 0.75,\n",
     "  no_repeat_ngram_size=2,\n",
     "  num_return_sequences=5\n",
     ")\n",
@@ -341,9 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unfortunately, but it was made with dry aged ground beef with tendons and tenders in a garlic broth. i'm used to good korean food, and this was no exception. if you like lots of choices, the staff will make sure you have what you need and the menu's ready for you. the food came out in 10 minutes and was hot and delicious! i ordered the miso soup to start and it had just the right amount of kick to it! very hearty and hearty with a hearty sized bowl of chicken and veggies throughout the broth served with very deliciously spicy butternut of the best beji de-healthy flavor toasted rice and teriyaki sauce they've had (compably spicy edmonton, not even more\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"Unfortunately,\"\n",
     "# encoding the input text\n",
@@ -353,7 +399,38 @@
     "  input_ids,\n",
     "  max_length = 150,\n",
     "  num_beams = 5,\n",
-    "  temperature = 0.8,\n",
+    "  temperature = 0.75,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=5\n",
+    ")\n",
+    "\n",
+    "print(tokenizer.decode(output[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i found the ladies and gents to be very unfriendly and unhelpful. i have been going to other department stores for years and this one was by far the best.this review is for the lunch buffet:\n",
+      "i have no complaints about this restaurant and as far as the food, it certainly did not disappoint.  i ordered the mexican chicken dinner platter and while the chicken was very tasty, the portions were small and the service was absolutely terrible. when i first saw the billowing out of the $45 for dinner, i asked about the waitress, she asked if i could tell her that it was a complimentary soft drinks included gratuity was between us, which completely made no touch of like a sorry but not\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"i found the\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 150,\n",
+    "  num_beams = 5,\n",
+    "  temperature = 0.75,\n",
     "  no_repeat_ngram_size=2,\n",
     "  num_return_sequences=5\n",
     ")\n",
@@ -378,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
