--- a/gpt2-generator-larger.ipynb
+++ b/gpt2-generator-larger.ipynb
@@ -25,6 +25,7 @@
     "from sklearn.utils import shuffle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2') #Encoder text to tensor\n",
     "model = TFGPT2LMHeadModel.from_pretrained('gpt2', pad_token_id=tokenizer.eos_token_id) "
    ]
@@ -38,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_30676\\3859494564.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_668\\3859494564.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  reviews['text'].str.replace('[^\\w\\s]','') #Remove punctuation\n"
      ]
     },
@@ -81,16 +82,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_25368\\214069651.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
-      "  df1 = reviews[:35000]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Segment the first section for model\n",
     "df1 = reviews[:35000]"
@@ -116,16 +108,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1913439883.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [3], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    return string_tokenized = tokenizer.encode(single_string)\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#turn the entire reviews set into a long string to be segmented in next sequence\n",
     "def stringify_tokenize(dataframe):\n",
@@ -139,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,23 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining optimizer\n",
-    "opt = tf.keras.optimizers.Adam(learning_rate=3e-5)#not in use \n",
-    "# definining loss function\n",
-    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "# defining our metric which we want to observe\n",
-    "metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
-    "# compiling the model\n",
-    "model.compile(loss=[loss],optimizer='adam',metrics=[metric])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +168,61 @@
     "    monitor='accuracy',\n",
     "    mode='auto',\n",
     "    save_best_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modelcompile(model):    \n",
+    "    # definining loss function\n",
+    "    loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "    # defining our metric which we want to observe\n",
+    "    metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
+    "    # compiling the model\n",
+    "    model.compile(loss=[loss],optimizer='adam',metrics=[metric])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot of the accuracy\n",
+    "def plot_acc():\n",
+    "    history_dict = history.history\n",
+    "    history_dict.keys() # the data gathered during training\n",
+    "    plt.clf()\n",
+    "    acc = history_dict['accuracy']\n",
+    "    epochs = range(1, len(acc) + 1)\n",
+    "    solid_blue_line = 'b'\n",
+    "    blue_dots = 'bo'\n",
+    "\n",
+    "    plt.plot(epochs, acc, solid_blue_line, label = 'Training Accuracy')\n",
+    "    plt.title('Training Accuracy')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "#plot of the loss\n",
+    "def plot_loss():\n",
+    "    history_dict = history.history\n",
+    "    history_dict.keys()\n",
+    "    loss = history_dict['loss']\n",
+    "    epochs = range(1, len(loss) + 1)\n",
+    "    solid_blue_line = 'b'\n",
+    "    blue_dots = 'bo'\n",
+    "\n",
+    "    plt.plot(epochs, loss, solid_blue_line, label = 'Training loss')\n",
+    "    plt.title('Training Loss')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -255,48 +277,6 @@
    "metadata": {},
    "source": [
     "**Check Resuls**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#plot of the accuracy\n",
-    "def plot_acc():\n",
-    "    history_dict = history.history\n",
-    "    history_dict.keys() # the data gathered during training\n",
-    "    plt.clf()\n",
-    "    acc = history_dict['accuracy']\n",
-    "    epochs = range(1, len(acc) + 1)\n",
-    "    solid_blue_line = 'b'\n",
-    "    blue_dots = 'bo'\n",
-    "\n",
-    "    plt.plot(epochs, acc, solid_blue_line, label = 'Training Accuracy')\n",
-    "    plt.title('Training Accuracy')\n",
-    "    plt.xlabel('Epochs')\n",
-    "    plt.ylabel('Accuracy')\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "#plot of the loss\n",
-    "def plot_loss():\n",
-    "    history_dict = history.history\n",
-    "    history_dict.keys()\n",
-    "    loss = history_dict['loss']\n",
-    "    epochs = range(1, len(loss) + 1)\n",
-    "    solid_blue_line = 'b'\n",
-    "    blue_dots = 'bo'\n",
-    "\n",
-    "    plt.plot(epochs, loss, solid_blue_line, label = 'Training loss')\n",
-    "    plt.title('Training Loss')\n",
-    "    plt.xlabel('Epochs')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.legend()\n",
-    "    plt.show()\n"
    ]
   },
   {
@@ -449,18 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_25544\\1975816305.py:2: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
-      "  df2 = reviews[35000:70000]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Segment the second section for model\n",
     "df2 = reviews[35000:70000]"
@@ -468,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (4517633 > 1024). Running this sequence through the model will result in indexing errors\n"
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (4492540 > 1024). Running this sequence through the model will result in indexing errors\n"
      ]
     }
    ],
@@ -489,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,6 +931,82 @@
    "metadata": {},
    "source": [
     "*Fourth Segment*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = reviews[105000:140000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Segment the third section for model\n",
+    "single_string = ''\n",
+    "for row in df4:\n",
+    "  x = row\n",
+    "  single_string += x \n",
+    "string_tokenized = tokenizer.encode(single_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (4518808 > 1024). Running this sequence through the model will result in indexing errors\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = datasetCreate(stringify_tokenize(df4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelcompile(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights('tmp\\weights.30.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "  62/3765 [..............................] - ETA: 12:15 - loss: 4.3034 - accuracy: 0.2734"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(dataset,epochs=30,callbacks=[model_checkpoint_callback])"
    ]
   }
  ],
